# VerletCloth

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini
src/VerletCloth/: Cloth.cpp  Cloth.h  Constraint.cpp  Constraint.h  Particle.cpp  Particle.h  core.h  main.cpp
src/VerletCloth/util/: grid.cpp  grid.h
src/editor/: editor.cpp  editor.h
src/shaders/: basic.frag  basic.vert  grid.frag  grid.vert
